...
private const val PROFILE = "_profile"
private const val LIST = "_list"

// Private object containing UI actions
private object A {
  const val NEW = "new"
  const val EDIT = "edit"
  const val DELETE = "delete"
  const val CONFIRM = "confirm"
  const val CANCEL = "cancel"
  const val NEXT = "next"
  const val BACK = "back"
}

// Private object containing UI component types
...

object C {
  object Tag {
    // Screen and components containers
    const val main_screen_container = "main" + UI_T.SCREEN_CONTAINER
    const val sign_in_screen_container = S.AUTH + UI_T.SCREEN_CONTAINER
    const val new_user_screen_container = S.NEW_USER + UI_T.SCREEN_CONTAINER
    const val user_profile_screen_container = S.USER_PROFILE + UI_T.SCREEN_CONTAINER
    const val other_user_profile_screen_container = S.OTHERS_USER_PROFILE + UI_T.SCREEN_CONTAINER
    const val edit_profile_screen_container = S.EDIT_PROFILE + UI_T.SCREEN_CONTAINER
    const val map_screen_container = S.MAP + UI_T.SCREEN_CONTAINER
    const val map_filters_screen_container = S.MAP_FILTER + UI_T.SCREEN_CONTAINER
    const val new_book_choice_screen_container = S.NEW_BOOK + "_choice" + UI_T.SCREEN_CONTAINER
...
    const val top_app_bar_container = "top_app_bar" + UI_T.CONTAINER

    // TopAppBar specific tags (TopAppBarComponent.kt)
    object TopAppBar {
      const val back_button = A.BACK + UI_T.ICON_BUTTON
      const val back_icon = A.BACK + UI_T.ICON
      const val screen_title = "screen_title"
      const val profile_button = S.USER_PROFILE + UI_T.ICON_BUTTON
      const val profile_icon = S.USER_PROFILE + UI_T.ICON
    }

    // BottomNavigationMenu specific tags (BottomNavigationMenu.kt)
    object BottomNavMenu {
...
      const val divider = BOOK + LIST + UI_T.DIVIDER
    }

    object BookEntryComp {
      // Parent container
      const val entries_list_book_container = "entries_list_book" + UI_T.CONTAINER
      const val scrollable = "scrollable" + UI_T.SCROLLABLE_CONTAINER
      // Fields
      const val title_field = "title" + UI_T.TEXT_FIELD
      const val genre_field = "genres" + UI_T.DROPDOWN
      const val author_field = "author" + UI_T.TEXT_FIELD
      const val description_field = "description" + UI_T.TEXT_FIELD
      const val rating_field = "rating" + UI_T.TEXT_FIELD
      const val isbn_field = "isbn" + UI_T.TEXT_FIELD
      const val photo_field = "photo" + UI_T.IMAGE_FIELD
...
      const val hollow_star = "hollow_star" + UI_T.ICON
    }

    // User Profile Screen specific tags (UserProfile.kt)
    object UserProfile {
      const val fullname = "fullname" + UI_T.TEXT
      const val email = "email" + UI_T.TEXT
      const val phone = "phoneNumber" + UI_T.TEXT
      const val address = "address" + UI_T.TEXT
      const val edit = S.EDIT_PROFILE + UI_T.BUTTON
      const val profileImage = "profile" + UI_T.IMAGE
      const val take_photo = A.NEW + UI_T.IMAGE + UI_T.BUTTON
      const val profileImageBox = "profile_image_box" + UI_T.CONTAINER
    }

    object AddressFields {
      const val newAddress = "new_address" + UI_T.TEXT
      const val address = "address" + UI_T.TEXT_FIELD
      const val city = "city" + UI_T.TEXT_FIELD
      const val canton = "canton" + UI_T.TEXT_FIELD
      const val postal = "postal" + UI_T.TEXT_FIELD
      const val country = "country" + UI_T.TEXT_FIELD
      const val cityError = "city_error" + UI_T.TEXT
      const val countryError = "canton_error" + UI_T.TEXT
    }

    object OtherUserProfile {
      const val fullname = "fullname"
      const val email = "email"
...
      const val profile_image_icon = S.OTHERS_USER_PROFILE + "_picture" + UI_T.ICON
      const val chatButton = "chatButton"
    }

    // Edit User Profile Screen specific tags (EditProfile.kt)
    object EditProfile {
      const val greeting = "greeting" + UI_T.TEXT_FIELD
      const val firstname = "firstname" + UI_T.TEXT_FIELD
      const val lastname = "lastname" + UI_T.TEXT_FIELD
      const val email = "email" + UI_T.TEXT_FIELD
      const val phone = "phone" + UI_T.TEXT_FIELD
      const val confirm = A.CONFIRM + UI_T.BUTTON
      const val dismiss = A.CANCEL + UI_T.BUTTON
    }

...
      const val app_name = S.AUTH + "_login_title" + UI_T.TEXT
      const val signIn = S.AUTH + UI_T.BUTTON
    }

    // NewUser Screen specific tags (NewUser.kt)
    object NewUser {
      const val personal_info = "personal_info" + UI_T.TEXT
      const val profile_pic = A.NEW + PROFILE + UI_T.IMAGE + UI_T.ICON_BUTTON
      const val greeting = "greeting" + UI_T.TEXT_FIELD
      const val firstname = "firstname" + UI_T.TEXT_FIELD
      const val lastname = "lastname" + UI_T.TEXT_FIELD
      const val email = "email" + UI_T.TEXT_FIELD
      const val phone = "phone" + UI_T.TEXT_FIELD
      const val firstname_error = "firstname_error" + UI_T.TEXT
      const val lastname_error = "lastname_error" + UI_T.TEXT
      const val email_error = "email_error" + UI_T.TEXT
      const val phone_error = "phone_error" + UI_T.TEXT
      const val confirm = A.CONFIRM + UI_T.BUTTON
    }

    // New Book Choice Screen specific tags (BookAdditionChoice.kt)
    object NewBookChoice {
...
      const val author = "author " + UI_T.TEXT_FIELD
      const val synopsis = "description " + UI_T.TEXT_FIELD
      const val rating = "rating " + UI_T.TEXT_FIELD
      const val isbn = "isbn " + UI_T.TEXT_FIELD
      const val photo = "photo" + UI_T.IMAGE_FIELD
      const val language = BOOK + "_language" + UI_T.FIELD
      const val save = A.CONFIRM + UI_T.BUTTON
    }

    // Edit Book Screen specific tags (EditBookScreen.kt)
    object EditBook {
      const val scrollable = Screen.EDIT_BOOK + UI_T.SCROLLABLE_CONTAINER
      const val title = BOOK + "_title" + UI_T.TEXT_FIELD
...
