...
          // Description Input Field
          OutlinedTextField(
              value = description,
              onValueChange = { description = it },
              label = { Text("Description") },
              placeholder = { Text("Provide a description of the book") },
              modifier = Modifier.testTag("inputBookDescription").testTag("Description"),
              colors =
                  TextFieldDefaults.outlinedTextFieldColors(
                      focusedBorderColor = Secondary, // Custom green for focused border
                      unfocusedBorderColor = Secondary, // Lighter green for unfocused border
                      cursorColor = Secondary, // Custom green for the cursor
                      focusedLabelColor = Secondary, // Custom green for focused label
...
